skeleton for index.html and game.html done

--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
         <script defer src="./js/main.js"></script>
         <title>Reflektor</title>
     </head>
-    <body></body>
+    <body>
+        <div class="homepage">
+            <h1>Reflektor</h1>
+            <div class="home-buttons">
+                <button
+                    class="start-button"
+                    onclick="window.location.href = 'game.html';"
+                >
+                    Start Game
+                </button>
+                <button class="leaderboard-button">Leaderboard</button>
+            </div>
+        </div>
+        <footer class="copyright-text">Copyright text</footer>
+    </body>
 </html>
