--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
         <div class="information-icons">
             <button class="pause-icon">Pause</button>
             <button class="leaderboard-icon">Leaderboard</button>
-            <button class="rule-icon">How to Play</button>
+            <button class="rules-icon">How to Play</button>
         </div>
         <div class="counters">
             <p class="rounds-title">
