skeleton for main.js done

--- a/game.html
+++ b/game.html
@@ -27,16 +27,16 @@
         </div>
         <div class="game-grids-container">
             <div class="main-grid"></div>
-            <div class="helper-icons">
-                <button class="hammer-icon">Hammer</button>
+            <div class="helpers">
+                <button class="helper hammer-icon">Hammer</button>
             </div>
             <div class="secondary-grid"></div>
         </div>
-        <div class="arrows-container">
-            <button class="arrow-up">Up</button>
-            <button class="arrow-left">Left</button>
-            <button class="arrow-down">Down</button>
-            <button class="'arrow-right">Right</button>
+        <div class="arrows">
+            <button class="arrow up">Up</button>
+            <button class="arrow left">Left</button>
+            <button class="arrow down">Down</button>
+            <button class="'arrow right">Right</button>
         </div>
     </body>
 </html>
