--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 >
                     Start Game
                 </button>
-                <button class="leaderboard-button">Leaderboard</button>
+                <button class="leaderboard-icon">Leaderboard</button>
             </div>
         </div>
         <footer class="copyright-text">Copyright text</footer>
