(completed) planning phase

--- a/game.html
+++ b/game.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="./css/style.css" />
         <script defer src="./js/main.js"></script>
         <title>Reflektor</title>
+        <!-- import script to run the init script -->
     </head>
     <body>
         <h1>Reflektor</h1>
