function done - generate grid based on variable passed in

--- a/index.html
+++ b/index.html
@@ -4,19 +4,13 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./css/style.css" />
-        <script defer src="./js/main.js"></script>
         <title>Reflektor</title>
     </head>
     <body>
         <div class="homepage">
             <h1>Reflektor</h1>
             <div class="home-buttons">
-                <button
-                    class="start-button"
-                    onclick="window.location.href = 'game.html';"
-                >
-                    Start Game
-                </button>
+                <button class="start-button">Start Game</button>
                 <button class="leaderboard-icon">Leaderboard</button>
             </div>
         </div>
