function update - updated rendering of text if player won

--- a/game.html
+++ b/game.html
@@ -34,10 +34,12 @@
             <div class="secondary-grid"></div>
         </div>
         <div class="arrows">
-            <button class="arrow up">Up</button>
-            <button class="arrow left">Left</button>
-            <button class="arrow down">Down</button>
-            <button class="'arrow right">Right</button>
+            <!-- trying to use data-* attributes -->
+            <!-- keeping the class as it is in case needed for styling (shorter with class than data-* attributes) -->
+            <button class="arrow up" data-direction="up">Up</button><br />
+            <button class="arrow left" data-direction="left">Left</button>
+            <button class="arrow down" data-direction="down">Down</button>
+            <button class="arrow right" data-direction="right">Right</button>
         </div>
     </body>
 </html>
