added new variable sqrElements for event listener and fix minor div typo

--- a/game.html
+++ b/game.html
@@ -46,7 +46,13 @@
                 </div>
             </div>
             <div class="helpers">
-                <button class="helper hammer-icon">Hammer</button>
+                <button class="helper hammer-icon" data-helper="hammer">
+                    Hammer
+                </button>
+                <button class="helper axe-icon" data-helper="axe">Axe</button>
+                <button class="helper sickle-icon" data-helper="sickle">
+                    Sickle
+                </button>
             </div>
             <div class="right-grid-container">
                 <div class="secondary-grid"></div>
