--- a/modals.html
+++ b/modals.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="icon" href="./assets/images/icon.png" />
         <link rel="stylesheet" href="./css/style.css" />
         <script defer src="./js/main.js"></script>
         <title>Reflektor</title>
