replace helper buttons to icons, updated assets file structure and amend styling to helpers

--- a/game.html
+++ b/game.html
@@ -47,13 +47,9 @@
                 </div>
             </div>
             <div class="helpers">
-                <button class="helper hammer-icon" data-helper="hammer">
-                    Hammer
-                </button>
-                <button class="helper axe-icon" data-helper="axe">Axe</button>
-                <button class="helper sickle-icon" data-helper="sickle">
-                    Sickle
-                </button>
+                <button class="helper hammer" data-helper="hammer"></button>
+                <button class="helper axe" data-helper="axe"></button>
+                <button class="helper sickle" data-helper="sickle"></button>
             </div>
             <div class="right-grid-container">
                 <div class="secondary-grid"></div>
