removed -icon from class name as it is unneccessary for now

--- a/modals.html
+++ b/modals.html
@@ -12,14 +12,14 @@
         <div class="modal">
             <div class="modal-header">
                 <p class="modal-title"></p>
-                <button class="close-icon"></button>
+                <button class="close"></button>
             </div>
             <div class="modal-content">
                 <!-- Modal 1 : Pause -->
                 <div class="modal-pause">
-                    <button class="home-icon">Home</button>
-                    <button class="reset-icon">Reset</button>
-                    <button class="leaderboard-icon">Leaderboard</button>
+                    <button class="home">Home</button>
+                    <button class="reset">Reset</button>
+                    <button class="leaderboard">Leaderboard</button>
                 </div>
                 <!-- Modal 2 : Leaderboard -->
                 <div class="modal-leaderboard">
