removed -icon from class name as it is unneccessary for now (part 2)

--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
         <h1>Reflektor</h1>
         <div class="information-icons">
             <button class="pause-icon">Pause</button>
-            <button class="leaderboard-icon">Leaderboard</button>
+            <button class="leaderboard">Leaderboard</button>
             <button class="rules-icon">How to Play</button>
         </div>
         <div class="counters">
