--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>Reflektor</h1>
             <div class="home-buttons">
                 <button class="start-button">Start Game</button>
-                <button class="leaderboard-icon">Leaderboard</button>
+                <button class="leaderboard">Leaderboard</button>
             </div>
         </div>
         <footer class="copyright-text">Copyright text</footer>
