updated list of cached element references and restructure accordingly

--- a/game.html
+++ b/game.html
@@ -12,9 +12,9 @@
     <body>
         <h1>Reflektor</h1>
         <div class="information-icons">
-            <button class="pause-icon">Pause</button>
+            <button class="pause">Pause</button>
             <button class="leaderboard">Leaderboard</button>
-            <button class="rules-icon">How to Play</button>
+            <button class="rules">How to Play</button>
         </div>
         <div class="counters">
             <p class="rounds-title">
