modals.html - new modal for general message since alert() is not allowed

--- a/modals.html
+++ b/modals.html
@@ -9,9 +9,20 @@
         <title>Reflektor</title>
     </head>
     <body>
+        <!-- Modal 0 : General Use -->
+        <div class="modal" id="generalModal" role="dialog">
+            <!-- role is added for accessibility especially for screen readers -->
+            <div class="modal-header">
+                <p class="modal-title"></p>
+                <button class="close" data-dismiss="modal">x</button>
+            </div>
+            <div class="modal-body">
+                <p class="general-message"></p>
+            </div>
+        </div>
+
         <!-- Modal 1 : Pause -->
         <div class="modal" id="pauseModal" role="dialog">
-            <!-- role is added for accessibility especially for screen readers -->
             <div class="modal-header">
                 <p class="modal-title"></p>
                 <button class="close" data-dismiss="modal">x</button>
