recode assets from backgroun-image in css to img in html

--- a/game.html
+++ b/game.html
@@ -47,9 +47,30 @@
                 </div>
             </div>
             <div class="helpers">
-                <button class="helper hammer" data-helper="hammer"></button>
-                <button class="helper axe" data-helper="axe"></button>
-                <button class="helper sickle" data-helper="sickle"></button>
+                <button class="helper hammer" data-helper="hammer">
+                    <img
+                        src="./assets/images/helpers/hammer.png"
+                        width="70px"
+                        height="70px"
+                        alt="helper : hammer"
+                    />
+                </button>
+                <button class="helper axe" data-helper="axe">
+                    <img
+                        src="./assets/images/helpers/axe.png"
+                        width="70px"
+                        height="70px"
+                        alt="helper : axe"
+                    />
+                </button>
+                <button class="helper sickle" data-helper="sickle">
+                    <img
+                        src="./assets/images/helpers/sickle.png"
+                        width="70px"
+                        height="70px"
+                        alt="helper : sickle"
+                    />
+                </button>
             </div>
             <div class="right-grid-container">
                 <div class="secondary-grid"></div>
