modals-style - created new file and updated basic styling

--- a/modals.html
+++ b/modals.html
@@ -5,10 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="./assets/images/icon.png" />
         <link rel="stylesheet" href="./css/style.css" />
+        <link rel="stylesheet" href="./css/modal-style.css" />
         <script defer src="./js/main.js"></script>
         <title>Reflektor</title>
     </head>
-    <body>
+    <body style="width: auto; height: auto">
         <!-- Modal 0 : General Use -->
         <div class="modal" id="generalModal" role="dialog">
             <!-- role is added for accessibility especially for screen readers -->
