rename tab titles, for easy checking in browser

--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
         <link rel="icon" href="./assets/images/icon.png" />
         <link rel="stylesheet" href="./css/style.css" />
         <script defer src="./js/main.js"></script>
-        <title>Reflektor</title>
+        <title>Reflektor (Game)</title>
         <!-- import script to run the init script -->
     </head>
     <body>
