--- a/modals.html
+++ b/modals.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./css/style.css" />
         <link rel="stylesheet" href="./css/modal-style.css" />
         <script defer src="./js/main.js"></script>
-        <title>Reflektor</title>
+        <title>Reflektor (Modals)</title>
     </head>
     <body style="width: auto; height: auto">
         <!-- Modal 0 : General Use -->
