--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="./assets/images/icon.png" />
         <link rel="stylesheet" href="./css/style.css" />
-        <title>Reflektor</title>
+        <title>Reflektor (Home)</title>
     </head>
     <body>
         <div class="homepage">
