--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="./assets/images/icon.png" />
-        <link rel="stylesheet" href="./css/style.css" />
+        <link rel="stylesheet" href="./css/main-style.css" />
+        <link rel="stylesheet" href="./css/home-style.css" />
         <title>Reflektor (Home)</title>
     </head>
     <body>
         <div class="homepage">
             <h1>Reflektor</h1>
             <div class="home-buttons">
-                <button class="start-button">Start Game</button>
+                <button class="start-button"><a href="./game.html" />Start Game</button>
                 <button class="leaderboard">Leaderboard</button>
             </div>
         </div>
