--- a/modals.html
+++ b/modals.html
@@ -4,9 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="./assets/images/icon.png" />
-        <link rel="stylesheet" href="./css/style.css" />
+        <link rel="stylesheet" href="./css/main-style.css" />
         <link rel="stylesheet" href="./css/modal-style.css" />
-        <script defer src="./js/main.js"></script>
         <title>Reflektor (Modals)</title>
     </head>
     <body style="width: auto; height: auto">
