function done - toggle modal which will fetch the div from separate html file

--- a/game.html
+++ b/game.html
@@ -6,6 +6,7 @@
 		<link rel="icon" href="./assets/images/icon.png" />
 		<link rel="stylesheet" href="./css/main-style.css" />
 		<link rel="stylesheet" href="./css/game-style.css" />
+		<link rel="stylesheet" href="./css/modal-style.css" />
 		<script defer src="./js/main.js"></script>
 		<title>Reflektor (Game)</title>
 		<!-- import script to run the init script -->
