--- a/modals.html
+++ b/modals.html
@@ -10,7 +10,7 @@
     </head>
     <body style="width: auto; height: auto">
         <!-- Modal 0 : General Use -->
-        <div class="modal" id="generalModal" role="dialog">
+        <div class="modal hide" id="generalModal" role="dialog">
             <!-- role is added for accessibility especially for screen readers -->
             <div class="modal-header">
                 <p class="modal-title"></p>
@@ -22,7 +22,7 @@
         </div>
 
         <!-- Modal 1 : Pause -->
-        <div class="modal" id="pauseModal" role="dialog">
+        <div class="modal hide" id="pauseModal" role="dialog">
             <div class="modal-header">
                 <p class="modal-title"></p>
                 <button class="close" data-dismiss="modal">x</button>
@@ -38,7 +38,7 @@
         </div>
 
         <!-- Modal 2 : Leaderboard -->
-        <div class="modal" id="leaderboardModal" role="dialog">
+        <div class="modal hide" id="leaderboardModal" role="dialog">
             <div class="modal-header">
                 <p class="modal-title"></p>
                 <button class="close" data-dismiss="modal">x</button>
@@ -60,7 +60,7 @@
         </div>
 
         <!-- Modal 3 : How To Play (rules) -->
-        <div class="modal" id="rulesModal" role="dialog">
+        <div class="modal hide" id="rulesModal" role="dialog">
             <div class="modal-header">
                 <p class="modal-title"></p>
                 <button class="close" data-dismiss="modal">x</button>
@@ -99,7 +99,7 @@
         </div>
 
         <!-- Modal 4 : Game Over -->
-        <div class="modal" id="gameOverModal" role="dialog">
+        <div class="modal hide" id="gameOverModal" role="dialog">
             <div class="modal-header">
                 <p class="modal-title"></p>
                 <button class="close" data-dismiss="modal">x</button>
@@ -116,7 +116,7 @@
         </div>
 
         <!-- Modal 5 : Game Won -->
-        <div class="modal" id="gameWonModal" role="dialog">
+        <div class="modal hide" id="gameWonModal" role="dialog">
             <div class="modal-header">
                 <p class="modal-title"></p>
                 <button class="close" data-dismiss="modal">x</button>
