css update for modal in game as well as minor html update for the buttons

--- a/game.html
+++ b/game.html
@@ -66,7 +66,7 @@
 				<div class="secondary-grid"></div>
 			</div>
 		</div>
-		<div id="modal-container"></div>
+		<div id="modal-container" class="hide"></div>
 		<footer class="copyright-text">Copyright text</footer>
 	</body>
 </html>
