game.html - replace up arrow text with image

--- a/game.html
+++ b/game.html
@@ -33,7 +33,13 @@
 				<div class="arrows">
 					<!-- trying to use data-* attributes -->
 					<!-- keeping the class as it is in case needed for styling (shorter with class than data-* attributes) -->
-					<button class="arrow up" data-direction="up">Up</button><br />
+					<button class="arrow up" data-direction="up">
+						<img
+							src="./assets/images/up-arrow.png"
+							width="70px"
+							height="70px"
+							alt="arrow up" /></button
+					><br />
 					<button class="arrow left" data-direction="left">Left</button>
 					<button class="arrow down" data-direction="down">Down</button>
 					<button class="arrow right" data-direction="right">Right</button>
