--- a/modals.html
+++ b/modals.html
@@ -1,200 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" href="./assets/images/icon.png" />
-		<link rel="stylesheet" href="./css/main-style.css" />
-		<link rel="stylesheet" href="./css/modal-style.css" />
-		<title>Reflektor (Modals)</title>
-	</head>
-	<body style="width: auto; height: auto">
-		<!-- Modal 0 : General Use -->
-		<div class="modal hide" id="generalModal" role="dialog">
-			<!-- role is added for accessibility especially for screen readers -->
-			<div class="modal-header">
-				<p class="modal-title"></p>
-				<button class="close" data-dismiss="modal">
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						width="16"
-						height="16"
-						fill="none"
-						class="close">
-						<path
-							d="M0.311375 15.352V11H3.12738V8.248H5.94338V7.128H3.12738V4.408H0.311375V0.0559998H4.37538V2.808H7.19138V5.496H8.79138V2.808H11.6074V0.0559998H15.7034V4.408H12.8554V7.128H10.0394V8.248H12.8554V11H15.7034V15.352H11.6074V12.632H8.79138V9.88H7.19138V12.632H4.37538V15.352H0.311375Z"
-							fill="currentColor" />
-					</svg>
-				</button>
-			</div>
-			<div class="modal-body">
-				<p class="general-message"></p>
-			</div>
-		</div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="icon" href="./assets/images/icon.png" />
+        <link rel="stylesheet" href="./css/main-style.css" />
+        <link rel="stylesheet" href="./css/modal-style.css" />
+        <title>Reflektor (Modals)</title>
+    </head>
+    <body style="width: auto; height: auto">
+        <!-- Modal 0 : General Use -->
+        <div class="modal hide" id="generalModal" role="dialog">
+            <!-- role is added for accessibility especially for screen readers -->
+            <div class="modal-header">
+                <p class="modal-title"></p>
+                <button class="close" data-dismiss="modal">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="none"
+                        class="close"
+                    >
+                        <path
+                            d="M0.311375 15.352V11H3.12738V8.248H5.94338V7.128H3.12738V4.408H0.311375V0.0559998H4.37538V2.808H7.19138V5.496H8.79138V2.808H11.6074V0.0559998H15.7034V4.408H12.8554V7.128H10.0394V8.248H12.8554V11H15.7034V15.352H11.6074V12.632H8.79138V9.88H7.19138V12.632H4.37538V15.352H0.311375Z"
+                            fill="currentColor"
+                        />
+                    </svg>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p class="general-message"></p>
+            </div>
+        </div>
 
-		<!-- Modal 1 : Pause -->
-		<div class="modal hide" id="pauseModal" role="dialog">
-			<div class="modal-header">
-				<p class="modal-title"></p>
-				<button class="close" data-dismiss="modal">
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						width="16"
-						height="16"
-						fill="none"
-						class="close">
-						<path
-							d="M0.311375 15.352V11H3.12738V8.248H5.94338V7.128H3.12738V4.408H0.311375V0.0559998H4.37538V2.808H7.19138V5.496H8.79138V2.808H11.6074V0.0559998H15.7034V4.408H12.8554V7.128H10.0394V8.248H12.8554V11H15.7034V15.352H11.6074V12.632H8.79138V9.88H7.19138V12.632H4.37538V15.352H0.311375Z"
-							fill="currentColor" />
-					</svg>
-				</button>
-			</div>
-			<div class="modal-body">
-				<div class="modal-pause">
-					<button class="continue">Continue</button>
-					<button class="reset">Reset</button>
-					<button class="home">Home</button>
-					<button class="leaderboard">Leaderboard</button>
-				</div>
-			</div>
-		</div>
+        <!-- Modal 1 : Pause -->
+        <div class="modal hide" id="pauseModal" role="dialog">
+            <div class="modal-header">
+                <p class="modal-title"></p>
+                <button class="close" data-dismiss="modal">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="none"
+                        class="close"
+                    >
+                        <path
+                            d="M0.311375 15.352V11H3.12738V8.248H5.94338V7.128H3.12738V4.408H0.311375V0.0559998H4.37538V2.808H7.19138V5.496H8.79138V2.808H11.6074V0.0559998H15.7034V4.408H12.8554V7.128H10.0394V8.248H12.8554V11H15.7034V15.352H11.6074V12.632H8.79138V9.88H7.19138V12.632H4.37538V15.352H0.311375Z"
+                            fill="currentColor"
+                        />
+                    </svg>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="modal-pause">
+                    <button class="continue">Continue</button>
+                    <button class="reset">Reset</button>
+                    <button class="home">Home</button>
+                    <button class="leaderboard">Leaderboard</button>
+                </div>
+            </div>
+        </div>
 
-		<!-- Modal 2 : Leaderboard -->
-		<div class="modal hide" id="leaderboardModal" role="dialog">
-			<div class="modal-header">
-				<p class="modal-title"></p>
-				<button class="close" data-dismiss="modal">
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						width="16"
-						height="16"
-						fill="none"
-						class="close">
-						<path
-							d="M0.311375 15.352V11H3.12738V8.248H5.94338V7.128H3.12738V4.408H0.311375V0.0559998H4.37538V2.808H7.19138V5.496H8.79138V2.808H11.6074V0.0559998H15.7034V4.408H12.8554V7.128H10.0394V8.248H12.8554V11H15.7034V15.352H11.6074V12.632H8.79138V9.88H7.19138V12.632H4.37538V15.352H0.311375Z"
-							fill="currentColor" />
-					</svg>
-				</button>
-			</div>
-			<div class="modal-body">
-				<div class="modal-leaderboard">
-					<!-- Leaderboard tab links -->
-					<div class="leaderboard-tabs">
-						<button class="round-tab-link">Round</button>
-						<button class="timer-tab-link">Timer</button>
-						<button class="steps-tab-link">Steps</button>
-					</div>
-					<!-- Leaderboard tab content -->
-					<div id="Round" class="tab-content"></div>
-					<div id="Time" class="tab-content"></div>
-					<div id="Steps" class="tab-content"></div>
-				</div>
-			</div>
-		</div>
+        <!-- Modal 2 : Leaderboard -->
+        <div class="modal hide" id="leaderboardModal" role="dialog">
+            <div class="modal-header">
+                <p class="modal-title"></p>
+                <button class="close" data-dismiss="modal">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="none"
+                        class="close"
+                    >
+                        <path
+                            d="M0.311375 15.352V11H3.12738V8.248H5.94338V7.128H3.12738V4.408H0.311375V0.0559998H4.37538V2.808H7.19138V5.496H8.79138V2.808H11.6074V0.0559998H15.7034V4.408H12.8554V7.128H10.0394V8.248H12.8554V11H15.7034V15.352H11.6074V12.632H8.79138V9.88H7.19138V12.632H4.37538V15.352H0.311375Z"
+                            fill="currentColor"
+                        />
+                    </svg>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="modal-leaderboard">
+                    <!-- Leaderboard tab links -->
+                    <div class="leaderboard-tabs">
+                        <button class="round-tab-link">Round</button>
+                        <button class="timer-tab-link">Timer</button>
+                        <button class="steps-tab-link">Steps</button>
+                    </div>
+                    <!-- Leaderboard tab content -->
+                    <div id="Round" class="tab-content"></div>
+                    <div id="Time" class="tab-content"></div>
+                    <div id="Steps" class="tab-content"></div>
+                </div>
+            </div>
+        </div>
 
-		<!-- Modal 3 : How To Play (rules) -->
-		<div class="modal hide" id="rulesModal" role="dialog">
-			<div class="modal-header">
-				<p class="modal-title"></p>
-				<button class="close" data-dismiss="modal">
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						width="16"
-						height="16"
-						fill="none"
-						class="close">
-						<path
-							d="M0.311375 15.352V11H3.12738V8.248H5.94338V7.128H3.12738V4.408H0.311375V0.0559998H4.37538V2.808H7.19138V5.496H8.79138V2.808H11.6074V0.0559998H15.7034V4.408H12.8554V7.128H10.0394V8.248H12.8554V11H15.7034V15.352H11.6074V12.632H8.79138V9.88H7.19138V12.632H4.37538V15.352H0.311375Z"
-							fill="currentColor" />
-					</svg>
-				</button>
-			</div>
-			<div class="modal-body">
-				<div class="modal-rules">
-					<p>
-						The game consists of 2 grids : <br />
-						Main (left) and Secondary (right)
-					</p>
-					<p>
-						Your goal is to move both characters on the Main grid and Secondary
-						grid each to destination X.
-					</p>
-					<ol>
-						<li>
-							You will only be able to control the character in Main grid.
-						</li>
-						<li>
-							Your other character in the Secondary grid will move in a mirrored
-							direction.
-						</li>
-						<li>
-							Use the arrow buttons on the screen or on your keyboard to move
-							the characters.
-						</li>
-						<li>
-							If you hit any of the obstacles (brick wall, grass or big tree),
-							it will be GAME OVER!
-						</li>
-						<li>Have fun and be on the leaderboard!</li>
-					</ol>
-				</div>
-			</div>
-		</div>
+        <!-- Modal 3 : How To Play (rules) -->
+        <div class="modal hide" id="rulesModal" role="dialog">
+            <div class="modal-header">
+                <p class="modal-title"></p>
+                <button class="close" data-dismiss="modal">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="none"
+                        class="close"
+                    >
+                        <path
+                            d="M0.311375 15.352V11H3.12738V8.248H5.94338V7.128H3.12738V4.408H0.311375V0.0559998H4.37538V2.808H7.19138V5.496H8.79138V2.808H11.6074V0.0559998H15.7034V4.408H12.8554V7.128H10.0394V8.248H12.8554V11H15.7034V15.352H11.6074V12.632H8.79138V9.88H7.19138V12.632H4.37538V15.352H0.311375Z"
+                            fill="currentColor"
+                        />
+                    </svg>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="modal-rules">
+                    <p>
+                        The game consists of 2 grids : <br />
+                        Main (left) and Secondary (right)
+                    </p>
+                    <p>
+                        Your goal is to move both characters on the Main grid
+                        and Secondary grid each to destination X.
+                    </p>
+                    <ol>
+                        <li>
+                            You will only be able to control the character in
+                            Main grid.
+                        </li>
+                        <li>
+                            Your other character in the Secondary grid will move
+                            in a mirrored direction.
+                        </li>
+                        <li>
+                            Use the arrow buttons on the screen or on your
+                            keyboard to move the characters.
+                        </li>
+                        <li>
+                            If you hit any of the obstacles (brick wall, grass
+                            or big tree), it will be GAME OVER!
+                        </li>
+                        <li>Have fun and be on the leaderboard!</li>
+                    </ol>
+                </div>
+            </div>
+        </div>
 
-		<!-- Modal 4 : Game Over -->
-		<div class="modal hide" id="gameOverModal" role="dialog">
-			<div class="modal-header">
-				<p class="modal-title"></p>
-				<button class="close" data-dismiss="modal">
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						width="16"
-						height="16"
-						fill="none"
-						class="close">
-						<path
-							d="M0.311375 15.352V11H3.12738V8.248H5.94338V7.128H3.12738V4.408H0.311375V0.0559998H4.37538V2.808H7.19138V5.496H8.79138V2.808H11.6074V0.0559998H15.7034V4.408H12.8554V7.128H10.0394V8.248H12.8554V11H15.7034V15.352H11.6074V12.632H8.79138V9.88H7.19138V12.632H4.37538V15.352H0.311375Z"
-							fill="currentColor" />
-					</svg>
-				</button>
-			</div>
-			<div class="modal-body">
-				<div class="modal-game-over">
-					<p>Continue?</p>
-					<div class="game-over-ans">
-						<button class="continue">Yes</button>
-						<button class="reset">No</button>
-					</div>
-				</div>
-			</div>
-		</div>
+        <!-- Modal 4 : Game Over -->
+        <div class="modal hide" id="gameOverModal" role="dialog">
+            <div class="modal-header">
+                <p class="modal-title"></p>
+                <button class="close" data-dismiss="modal">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="none"
+                        class="close"
+                    >
+                        <path
+                            d="M0.311375 15.352V11H3.12738V8.248H5.94338V7.128H3.12738V4.408H0.311375V0.0559998H4.37538V2.808H7.19138V5.496H8.79138V2.808H11.6074V0.0559998H15.7034V4.408H12.8554V7.128H10.0394V8.248H12.8554V11H15.7034V15.352H11.6074V12.632H8.79138V9.88H7.19138V12.632H4.37538V15.352H0.311375Z"
+                            fill="currentColor"
+                        />
+                    </svg>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="modal-game-over">
+                    <p>Continue?</p>
+                    <div class="game-over-ans">
+                        <button class="continue text">Yes</button>
+                        <button class="reset text">No</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-		<!-- Modal 5 : Game Won -->
-		<div class="modal hide" id="gameWonModal" role="dialog">
-			<div class="modal-header">
-				<p class="modal-title"></p>
-				<button class="close" data-dismiss="modal">
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						width="16"
-						height="16"
-						fill="none"
-						class="close">
-						<path
-							d="M0.311375 15.352V11H3.12738V8.248H5.94338V7.128H3.12738V4.408H0.311375V0.0559998H4.37538V2.808H7.19138V5.496H8.79138V2.808H11.6074V0.0559998H15.7034V4.408H12.8554V7.128H10.0394V8.248H12.8554V11H15.7034V15.352H11.6074V12.632H8.79138V9.88H7.19138V12.632H4.37538V15.352H0.311375Z"
-							fill="currentColor" />
-					</svg>
-				</button>
-			</div>
-			<div class="modal-body">
-				<div class="modal-game-over">
-					<p>New Game?</p>
-					<div class="game-over-ans">
-						<button class="reset">Yes</button>
-						<button class="home">No</button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</body>
+        <!-- Modal 5 : Game Won -->
+        <div class="modal hide" id="gameWonModal" role="dialog">
+            <div class="modal-header">
+                <p class="modal-title">Congratulations! 🎉</p>
+                <button class="close" data-dismiss="modal">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="16"
+                        height="16"
+                        fill="none"
+                        class="close"
+                    >
+                        <path
+                            d="M0.311375 15.352V11H3.12738V8.248H5.94338V7.128H3.12738V4.408H0.311375V0.0559998H4.37538V2.808H7.19138V5.496H8.79138V2.808H11.6074V0.0559998H15.7034V4.408H12.8554V7.128H10.0394V8.248H12.8554V11H15.7034V15.352H11.6074V12.632H8.79138V9.88H7.19138V12.632H4.37538V15.352H0.311375Z"
+                            fill="currentColor"
+                        />
+                    </svg>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="modal-game-over">
+                    <p>You have reached the goal!</p>
+                    <p>Are you interested to go for another round?</p>
+                    <div class="game-over-ans">
+                        <button class="reset text">Yes</button>
+                        <button class="home text">No</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
